--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -54,28 +54,20 @@ jobs:
           type=sha,prefix=sha-,format=short
           type=raw,value=latest,enable={{is_default_branch}}
 
-    - name: Build and push Docker image
-      id: build
+    - name: Build Docker image for scanning
+      id: build-scan
       uses: docker/build-push-action@v5
       with:
         context: .
-        platforms: linux/amd64,linux/arm64
-        push: false
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+        platforms: linux/amd64
+        load: true
+        tags: scan-image:latest
         cache-from: type=registry,ref=${{ env.DOCKERHUB_CACHE_REPO }}:cache
-        cache-to: type=registry,ref=${{ env.DOCKERHUB_CACHE_REPO }}:cache,mode=max
-        outputs: type=docker,dest=/tmp/image.tar
-
-    - name: Load image for scanning
-      run: |
-        docker load --input /tmp/image.tar
-        echo "IMAGE_ID=$(docker images --format 'table {{.Repository}}:{{.Tag}}' | grep -v REPOSITORY | head -n1)" >> $GITHUB_ENV
 
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ env.IMAGE_ID }}
+        image-ref: scan-image:latest
         format: 'sarif'
         output: 'trivy-results.sarif'
         severity: 'CRITICAL,HIGH'
@@ -87,7 +79,7 @@ jobs:
       with:
         sarif_file: 'trivy-results.sarif'
 
-    - name: Push Docker image (only if scan passed)
+    - name: Build and push multi-arch Docker image
       uses: docker/build-push-action@v5
       with:
         context: .
